feat: added ability to send attachment with the caption